# ngfd-plugin-droid-vibrator

./: CMakeLists.txt  README
rpm/: ngfd-plugin-droid-vibrator.spec
src/: droid-vibrator.c
